# python-for-data-engineering

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: README-GITHUB-METADATA.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_improvement.md
.github/workflows/: ci.yml
assets/diagrams/: github-banner-brief.md  pipeline-overview.md
datasets/raw/: customers.json  sales_data.csv
datasets/sample_inputs/: api_orders_sample.json  readme.txt
docs/: best-practices.md  course-overview.md  glossary.md  learning-path.md  portfolio-guide.md  repo-navigation.md  setup-guide.md
exercises/module_wise_exercises/: 01_python_basics.md  02_data_structures.md  03_intermediate_python.md  04_files_and_io.md  05_data_processing.md  06_databases.md  07_apis.md  08_etl_elt.md  09_production_python.md  10_performance.md  11_project_structure.md  12_real_world_patterns.md
exercises/solutions/: 01_python_basics.md  02_data_structures.md  03_intermediate_python.md  04_files_and_io.md  05_data_processing.md  06_databases.md  07_apis.md  08_etl_elt.md  09_production_python.md  10_performance.md  11_project_structure.md  12_real_world_patterns.md
modules/00_orientation/: README.md
modules/01_python_basics/: README.md
modules/02_data_structures/: README.md
modules/03_intermediate_python/: README.md
modules/04_files_and_io/: README.md
modules/05_data_processing/: README.md
modules/06_databases/: README.md
modules/07_apis/: README.md
modules/08_etl_elt/: README.md
modules/10_performance/: README.md
(+28 files in other folders)
